--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
         android:allowBackup="true"
@@ -18,7 +18,13 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".TestPhotoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PictureActivity"
+            android:exported="false" />
+        <activity
+            android:name=".test"
             android:exported="false" />
         <activity
             android:name=".SearchActivity"
@@ -30,7 +36,7 @@
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".test"
+            android:name=".MainActivity"
             android:exported="false" />
         <activity
             android:name=".OcrActivity"
@@ -39,7 +45,7 @@
             android:name=".CameraActivity"
             android:exported="false" />
         <activity
-            android:name=".PictureActivity"
+            android:name=".ImageDisplayActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
